Se añadio la información a la página de Bibi

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Suppablog - Minimal Blog Html Template</title>
+        <title>Bibi Wetzel</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Colorlib" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -49,7 +49,6 @@
                     <ul class="main-menu sm sm-clean">
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="about.html" class="current">Historia</a></li>
-                        <li><a href="scroll.html">Logros</a></li>
                         <li><a href="contact.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -70,9 +69,7 @@
                         <a href="#"><i class="fa fa-twitter"></i></a>
                         <a href="#"><i class="fa fa-youtube-play"></i></a>
                         <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-vimeo"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                        <a href="#"><i class="fa fa-rss"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="fixed scroll-top"><i class="fa fa-caret-square-o-up" aria-hidden="true"></i></div>
@@ -108,13 +105,24 @@
                               inspiración para niños y adultos, por
                               romper esquemas y paradigmas, al
                               ser la otra cara de la realidad
-                              alcanzable.</p>
+                              alcanzable.
+                              <br> <br>
+                              Bibi entrena gimnasia cerca de 40 horas a la semana,
+                              con la finalidad de fortalecer sus músculos y lograr
+                              nuevos elementos gimnásticos de mayor
+                              complejidad.<br>
+                              </p>
                         </div>
                         <div class="one_half last">
-                          Bibi entrena gimnasia cerca de 40 horas a la semana,
-                          con la finalidad de fortalecer sus músculos y lograr
-                          nuevos elementos gimnásticos de mayor
-                          complejidad.<br>
+                          Homenajeada por políticos, artistas y actores en diversos
+                          actos de gobierno, así como con la obra de teatro musical
+                          "Josefa" referente a mujeres excepcionales, (José Ortiz de Dominguez).
+                          <br>
+                          Seleccionada como talento KUMON "Norte América"
+                          <br>
+                          <br>
+                          Reconocida en redes sociales con más de 37 millones
+                          de reproducciones.
                         </div>
                         <div class="clear"></div>
                         <br>
@@ -132,7 +140,6 @@
                                     <div class="member-content">
                                         <p>Asiste a escuela regular, SECUNDARIA, recibiendo
                                           BECA por su desempeño atlético.</p>
-                                        <br>
                                         <p>Actualmente se encuentra terminando su 2do año de
                                           Secundaria, sin adecuaciones curriculares.</p>
                                         <br>
@@ -152,7 +159,15 @@
                                           oratoria y terapia del lenguaje.
                                           <br>
                                           Además de tener una activa vida social… En su escaso
-                                          tiempo libre.</p>
+                                          tiempo libre.
+                                          <br> <br>
+                                          Reconocida y condecorada por la cámara de diputados
+                                          como atleta sobresaliente.
+                                          <br>
+                                          Galaradonada por su aportación a la sociedad,
+                                          por diversas asociaciones civiles como "Observatorio
+                                          Ciudadano", "Mujeres Empresarias", etc.
+                                          </p>
                                     </div>
                                 </div>
                             </div>
