--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Suppablog - Minimal Blog Html Template</title>
+        <title>Bibi Wetzel</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Colorlib" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -39,30 +39,19 @@
         <!-- Left Sidebar -->
         <div id="sidebar" class="sidebar">
             <div class="menu-left-part">
-                <div class="search-holder">
-                    <label>
-                        <input type="search" class="search-field" placeholder="Type here to search..." value="" name="s" title="Search for:">
-                    </label>
-                </div>
                 <div class="site-info-holder">
-                    <div class="site-title">Suppablog</div>
+                    <div class="site-title">Bibi Wetzel</div>
                     <p class="site-description">
-                        Suppablog is simple and yet cool wordpress theme to lorem ipsum dolor sit.
+                        Campeona mundial de gimansía
                     </p>
                 </div>
                 <nav id="header-main-menu">
                     <ul class="main-menu sm sm-clean">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="scroll.html">Scroll</a></li>
-                        <li><a href="contact.html" class="current">Contact</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="about.html">Historia</a></li>
+                        <li><a href="contact.html" class="current">Contacto</a></li>
                     </ul>
                 </nav>
-                <footer>
-                    <div class="footer-info">
-                        © 2018 SUPPABLOG HTML TEMPLATE. <br> CRAFTED WITH <i class="fa fa-heart"></i> BY <a href="https://colorlib.com">COLORLIB</a>.
-                    </div>
-                </footer>
             </div>
             <div class="menu-right-part">
                 <div class="logo-holder">
@@ -80,9 +69,7 @@
                         <a href="#"><i class="fa fa-twitter"></i></a>
                         <a href="#"><i class="fa fa-youtube-play"></i></a>
                         <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-vimeo"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                        <a href="#"><i class="fa fa-rss"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="fixed scroll-top"><i class="fa fa-caret-square-o-up" aria-hidden="true"></i></div>
