Se hicieron cambios en la página

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 						<div class="header-wrap">
 							<div class="header-top d-flex justify-content-between align-items-center">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" alt=""></a>
+									<!-- <a href="index.html"><img src="img/logo.png" alt=""></a> -->
 								</div>
 								<div class="main-menubar d-flex align-items-center">
 									<nav class="hide">
-										<a href="index.html">Home</a>
-										<a href="generic.html">Generic</a>
+										<a href="index.html">Inicio</a>
+										<a href="generic.html">Historia</a>
 										<a href="elements.html">Elements</a>
 									</nav>
 									<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
@@ -54,13 +54,7 @@
 					<div class="overlay hero-overlay-bg"></div>
 					<div class="container">
 						<div class="row height align-items-center justify-content-center">
-							<div class="col-lg-7">
-								<div class="banner-content text-center">
-									<!-- <img class="img-fluid" src="img/title-img.png" alt=""> -->
-									<p class="text-white p-2 mb-30">Bibi Wetzel</p>
-									<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
-								</div>
-							</div>
+							<div class="col-lg-7"></div>
 						</div>
 					</div>
 				</div>
@@ -74,20 +68,53 @@
 						<div class="col-lg-6 about-left">
 							<div class="overlay overlay-bg"></div>
 							<img class="img-fluid" src="img/about1.jpg" alt="">
+							<img class="img-fluid" src="img/bibi3.jpg" alt="">
+							<img class="img-fluid" src="img/recibimiento-a-bibi-1.jpg" alt="">
 						</div>
 						<div class="col-lg-6 about-right pt-30 pb-30">
 							<div class="single-desc">
 								<span class="icon lnr lnr-rocket"></span>
 								<h2>Familia</h2>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+									Es el caso de Mónica Aguilar, mamá de María Bárbara Wetzel,
+									una pequeña que nació con Trisomía 21, pero que a los 11 años
+									deslumbró con su talento al conquistar el Mundial de Gimnasia
+									Down 2015, celebrado en Italia. Orgullo nacional. Mónica, quien
+									ha estado al pendiente de lo que sucede en la vida de 'Bibi',
+									relató para La Afición que como madre de una pequeña con "capacidades
+									especiales" se necesita ser tolerante, ya que las personas, en
+									su caso, con Síndrome de Down, "hay cosas que no se les facilita tanto,
+									entonces tiene que haber mucho esfuerzo, mucha paciencia y muchos
+									objetivos de muy corto plazo para ir logrando otros objetivos de
+									mayor alcance". Sin embargo, la señora Aguilar cree que esto no es
+									motivo para tratarlos de diferente manera, pues las personas con
+									Trisomía 21 están conscientes de tener esta condición genética;
+									por ello, a María Bárbara "nunca le pongo enfrente el estereotipo
+									o la clasificación genética que acostumbra mucha gente a ponerle",
+									porque es molesto para ellos, de tal manera que pueden llegar a
+									sentirse discriminados. Al contrario, Mónica ha tratado de proyectarle
+									seguridad y confianza, además de hacerla sentir que es una persona
+									amada y que puede ser incluida en la sociedad como un "ser respetado,
+									como lo somos cualquier otra persona".
 								</p>
 							</div>
 							<div class="single-desc">
 								<span class="icon lnr lnr-sun"></span>
 								<h2>Biografía</h2>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+										Bibi entrena gimnasia cerca de 40 horas a la semana,
+                    con la finalidad de fortalecer sus músculos y lograr
+                    nuevos elementos gimnásticos de mayor
+                    complejidad.<br>
+								    Homenajeada por políticos, artistas y actores en diversos
+                    actos de gobierno, así como con la obra de teatro musical
+                    "Josefa" referente a mujeres excepcionales, (José Ortiz de Dominguez).
+                    <br>
+                    Seleccionada como talento KUMON "Norte América"
+                    <br>
+                    <br>
+                  	Reconocida en redes sociales con más de 37 millones
+                    de reproducciones.
 								</p>
 							</div>
 						</div>
@@ -100,19 +127,23 @@
 				<div class="container">
 					<div class="row h-100 justify-content-end align-items-center">
 						<div class="col-lg-4 col-md-4 single-feature">
-							<h2>Reasons To Choose Notebook</h2>
+							<h2>KUMON</h2>
 							<p>
-								Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola.
+								El estar de vacaciones no es motivo para que 'Bibi' descuide sus
+								responsabilidades; por ello, una vez al día, durante todo el año, dedica tiempo para sus ejercicios de desarrollo mental.
 							</p>
 						</div>
 						<div class="col-lg-4 col-md-4 single-feature">
-							<h2>Facts Why Inkjet Printing</h2>
+							<!-- <h2>Facts Why Inkjet Printing</h2> -->
 							<p>
-								Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola.
+							La multimedallista realiza series de Kumon, que la ayudan a fortalecer
+							sus habilidades cognitivas en cuestión matemática, lenguaje, comprensión
+							de lectura en pruebas contra reloj. Eso sí, sus padres no son permisivos y
+							exigen el máximo rendimiento de su hija.
 							</p>
 						</div>
 						<div class="col-lg-4 col-md-4 single-feature">
-							<img class="img-fluid" src="img/feature.png" alt="">
+							<img class="img-fluid" src="img/kumon.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -234,84 +265,6 @@
 				</div>
 			</section>
 			<!-- End Precess Area -->
-			<!-- Start Newsletter Section -->
-			<section class="newsletter-area pt-60 pb-60">
-				<div class="container">
-					<div class="row justify-content-center align-items-center">
-						<div class="text-center">
-							<h3 class="text-white">Subscribe for our Newsletter</h3>
-							<p>We won’t send any kind of spam</p>
-							<div class="subcribe-form" id="mc_embed_signup">
-								<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
-										<input name="EMAIL" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" required="" type="email">
-										<div style="position: absolute; left: -5000px;">
-											<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-										</div>
-										<button class="primary-btn hover d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></button>
-										<div class="info"></div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- Start Newsletter Section -->
-			<footer class="section-gap footer-area">
-				<div class="container">
-					<div class="row pt-60 pb-60">
-						<div class="col-lg-3 col-sm-6">
-							<div class="single-footer-widget">
-								<h6 class="text-uppercase mb-20">Top Products</h6>
-								<ul class="footer-nav">
-									<li><a href="#">Managed Website</a></li>
-									<li><a href="#">Manage Reputation</a></li>
-									<li><a href="#">Power Tools</a></li>
-									<li><a href="#">Marketing Service</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6">
-							<div class="single-footer-widget">
-								<h6 class="text-uppercase mb-20">Navigation</h6>
-								<ul class="footer-nav">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Main Features</a></li>
-									<li><a href="#">Offered Services</a></li>
-									<li><a href="#">Latest Portfolio</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-3 col-sm-6">
-							<div class="single-footer-widget">
-								<h6 class="text-uppercase mb-20">Compare</h6>
-								<ul class="footer-nav">
-									<li><a href="#">Works &amp; Builders</a></li>
-									<li><a href="#">Works &amp; Wordpress</a></li>
-									<li><a href="#">Works &amp; Templates</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="col-lg-3 col-sm-6">
-							<div class="single-footer-widget">
-								<h6 class="text-uppercase mb-20">About</h6>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi nam iusto ipsum error, ad expedita eveniet libero non magni, odit magnam. Fuga reiciendis iure neque, earum similique cum eligendi deleniti?
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
-						<p class="footer-text m-0">Copyright © 2017 All rights reserved   |   This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></p>
-						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-				</div>
-			</footer>
 		</div>
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
