--- a/generic.html
+++ b/generic.html
@@ -39,8 +39,8 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="index.html">Home</a>
-									<a href="generic.html">Generic</a>
+									<a href="index.html">Inicio</a>
+									<a href="generic.html">Historia</a>
 									<a href="elements.html">Elements</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
